WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196801
AbstractValue::validateOSREntryValue is wrong for Int52 constants
https://bugs.webkit.org/show_bug.cgi?id=196801
Summary
AbstractValue::validateOSREntryValue is wrong for Int52 constants
Saam Barati
Reported
2019-04-10 18:51:38 PDT
We need to normalize the representation
Attachments
patch
(3.40 KB, patch)
2019-04-10 19:32 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-04-10 19:25:58 PDT
<
rdar://problem/49771122
>
Saam Barati
Comment 2
2019-04-10 19:32:09 PDT
Created
attachment 367191
[details]
patch
Yusuke Suzuki
Comment 3
2019-04-10 19:34:58 PDT
Comment on
attachment 367191
[details]
patch r=me
WebKit Commit Bot
Comment 4
2019-04-10 23:26:42 PDT
Comment on
attachment 367191
[details]
patch Clearing flags on attachment: 367191 Committed
r244185
: <
https://trac.webkit.org/changeset/244185
>
WebKit Commit Bot
Comment 5
2019-04-10 23:26:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug