AbstractValue::validateOSREntryValue is wrong for Int52 constants https://bugs.webkit.org/show_bug.cgi?id=196801 <rdar://problem/49771122>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/abstract-value-int52-constant-validation-should-not-care-about-representation.js: Added.

Source/JavaScriptCore:

validateOSREntryValue should not care about the format of the incoming
value for Int52s. This patch normalizes the format of m_value and
the incoming value when comparing them.

* dfg/DFGAbstractValue.h:
(JSC::DFG::AbstractValue::validateOSREntryValue const):


Canonical link: https://commits.webkit.org/211096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244185 268f45cc-cd09-0410-ab3c-d52691b4dbfc